--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,15 @@
   {% include head.html %}
 
   <body>
+    <div class="container-fluid">
+      {% include header.html %}
 
-    {% include header.html %}
+      {{ content }}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+      {% include footer.html %}
     </div>
 
-    {% include footer.html %}
-
+  {% include scripts.html %}
   </body>
 
 </html>
