--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,3 +3,5 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- Placeholder Images REMOVE LATER ON! -->
 <script src="bower_components/holderjs/holder.min.js"></script>
+<!-- Main Script -->
+<script src="js/main.js"></script>
