--- a/_includes/section-hero.html
+++ b/_includes/section-hero.html
@@ -1,6 +1,7 @@
 <section class="section section-hero">
   <div class="section-content text-center">
     <h1>Headline</h1>
-    <p>Sub-headline text goes here.</p>
+    <h3>Sub-headline text goes here.</h3>
+    <a href="#{{site.data.sections[0].linkName}}" class="btn btn-primary">View More</a>
   </div>
 </section>
