--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <footer class="site-footer">
-  FOOTER
-  </footer>
-</div>
+<footer class="site-footer">
+  <div class="row">
+    <h1 class="text-center">FOOTER</h1>
+  </div>
+</footer>
