--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -1,23 +1,27 @@
 <section class="section section-contact">
   <h1 class="text-center">Contact</h1>
-  <form action="#" method="POST">
-      <div class="row">
-        <div class="col-md-6">
-          <input placeholder="Name" type="text" name="name">
-        </div>
-        <div class="col-md-6">
-          <input placeholder="Your Email" type="email" name="_replyto">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <textarea placeholder="Message" name="message"></textarea>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 col-md-4 col-md-offset-6">
-          <input class="submit-btn" type="submit" value="Send Message" />
-        </div>
-      </div>
-    </form>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <form action="#" method="POST">
+          <div class="row">
+            <div class="col-md-6">
+              <input placeholder="Name" type="text" name="name">
+            </div>
+            <div class="col-md-6">
+              <input placeholder="Your Email" type="email" name="_replyto">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <textarea placeholder="Message" name="message"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-md-4 col-md-offset-8">
+              <input class="submit-btn" type="submit" value="Send Message" />
+            </div>
+          </div>
+        </form>
+    </div>
+  </div>
 </section>
