--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,22 +1,71 @@
 .section {
   padding: 50px 0;
+  hr {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.9em;
+    margin-left: auto;
+    margin-right: 75%;
+    border-width: 3px;
+    border-color: #2ecc71;
+  }
+  p {
+    font-size: 16px;
+    color: #787676;
+  }
+}
+.item-animated {
+  visibility: hidden;
 }
 
 /* section-hero.html */
 .section-hero {
-  height: 90vh;
+  height: 80vh;
   width: 100%;
+  color: #fff;
+
+  background-image:
+    linear-gradient(
+      rgba(52,73,94, 0.8),
+      rgba(52,73,94, 0.8)
+    ),
+    url('/images/hero-image.jpg');
+  background-repeat: no-repeat;
+  // background-attachment: fixed;
+  background-position: center;
   .section-content {
-    padding-top: 10%
+    padding-top: 10%;
+    h1 {
+      font-size: 72px;
+    }
+    h3 {
+      margin-bottom: 1.0em;
+      font-size: 36px;
+    }
   }
 }
 
-/* section-one.html */
-
-/* section-two.html */
-
-/* section-three.html */
-
-/* section-four.html */
-
 /* section-contact.html */
+.section-contact {
+  h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 3%;
+  }
+  input, textarea {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 20px 20px;
+    border: 3px solid #d2cfcf;
+    border-radius: 3px;
+  }
+  input.submit-btn {
+    color: white;
+    border: none;
+    background-color: #d2cfcf;
+    &:hover {
+      background-color: #51c872;
+    }
+  }
+  textarea {
+    resize: none;
+  }
+}
