--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -13,7 +13,7 @@
           </div>
           <div class="row">
             <div class="col-md-12">
-              <textarea placeholder="Message" name="message"></textarea>
+              <textarea placeholder="How can I help you?" name="message"></textarea>
             </div>
           </div>
           <div class="row">
