--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,6 +13,22 @@
     font-size: 16px;
     color: #787676;
   }
+  img {
+    box-shadow: 2px 5px 5px #ccd0cd;
+  }
+  .section-heading {
+    margin-bottom: 10%;
+    h3 {
+      font-weight: 400;
+    }
+    .sub-text {
+      color: #51c872;
+      line-height: 30%;
+    }
+  }
+  .section-content {
+    margin-bottom: 5%;
+  }
 }
 .item-animated {
   visibility: hidden;
@@ -33,7 +49,7 @@
   background-repeat: no-repeat;
   // background-attachment: fixed;
   background-position: center;
-  .section-content {
+  .hero-content {
     padding-top: 10%;
     h1 {
       font-size: 72px;
@@ -41,6 +57,39 @@
     h3 {
       margin-bottom: 1.0em;
       font-size: 36px;
+    }
+  }
+}
+
+/* section-about.html */
+.section-about {
+  .quoted-text {
+    margin-bottom: 5%;
+    font-weight: 700;
+    font-style: italic;
+    &::before {
+      content: '"';
+    }
+    &::after {
+      content: '"';
+    }
+  }
+}
+
+/* section-facts.html */
+.section-facts {
+  background-color: rgb(52,73,94);
+  .fact-block {
+    hr {
+      margin-right: 95%;
+      border-color: white;
+    }
+    h3 {
+      color: #51c872;
+      // #34495e
+    }
+    p {
+      color: #b5b8b6;
     }
   }
 }
