--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,3 @@
 <header class="site-header">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="{{site.baseurl}}/">
-          {{site.title}}
-        </a>
-      </div>
-
-      <ul class="nav navbar-nav navbar-right">
-        {% for section in site.data.sections %}
-        <li><a href="#{{section.linkName}}">{{section.linkName}}</a></li>
-        {% endfor %}
-        <li><a class="btn btn-primary" href="">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+  {% include modules/navigation-module.html %}
 </header>
