Add generated scss.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,5 +11,6 @@
         "bs-overrides",
         // Include Modules
         "modules/navigation-module",
-        "modules/jumbo-module"
+        "modules/jumbo-module",
+        "modules/service-module"
 ;
