--- a/_includes/modules/navigation-module.html
+++ b/_includes/modules/navigation-module.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navigation-module">
+<nav class="navbar navbar-default navbar-fixed-top navigation-module">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="{{site.baseurl}}/">
