--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,15 @@
 body {
+  padding-top: 70px;
+  line-height: 1;
+  font-size: 14px;
+  font-family: 'Source Sans Pro', sans-serif;
   background-color: #EDF4FC;
-  img {
-    
+  // Headings
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
+  }
+  // Paragraphs
+  p {
+    line-height: 140%;
   }
 }
