--- a/_sass/modules/_navigation-module.scss
+++ b/_sass/modules/_navigation-module.scss
@@ -1,7 +1,7 @@
 nav.navigation-module {
   .navbar-header {
     a.navbar-brand {
-      color: red;
+      // color: red;
     }
   }
   .navbar-nav {
