Update generated css.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,8 +9,11 @@
         "base",
         "layout",
         "bs-overrides",
+        // Include Section Backgrounds
+        "section-backgrounds/section-styles",
         // Include Modules
         "modules/navigation-module",
         "modules/jumbo-module",
-        "modules/service-module"
+        "modules/service-module",
+        "modules/contact-module"
 ;
