--- a/_includes/modules/contact-module.html
+++ b/_includes/modules/contact-module.html
@@ -1,7 +1,7 @@
-<div class="container contact-module">
+<div id="contact-form" class="contact-module">
   <div class="row">
     <div class="col-xs-12 col-md-8 col-md-offset-2 contact-container">
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6 contact-module-content">
             <p>Hello</p>
             <h2>There!</h2>
             <p>
@@ -9,11 +9,12 @@
             </p>
         </div>
         <div class="col-xs-12 col-md-6">
-          <form class="contact-form" action="https://formspree.io/your@email.com"
+          <form class="contact-form-container" action="https://formspree.io/your@email.com"
         method="POST">
-              <input type="text" name="name">
-              <input type="email" name="_replyto">
-              <input type="submit" value="Send">
+              <input type="text" name="name" placeholder="Your Name">
+              <input type="email" name="_replyto" placeholder="Your Email">
+              <textarea type="text" name="name" placeholder="Your Message"></textarea>
+              <input class="submit-button" type="submit" value="Send">
           </form>
         </div>
     </div>
