Add link to about section."

--- a/_includes/modules/service-module-about.html
+++ b/_includes/modules/service-module-about.html
@@ -1,4 +1,4 @@
-<div class="container service-module">
+<div id="about-section" class="container service-module">
   <div class="row">
     {% for section in site.categories.about %}
     <div class="col-xs-12 col-md-8 col-md-offset-2 service-container">
