--- a/_includes/modules/jumbo-module.html
+++ b/_includes/modules/jumbo-module.html
@@ -6,7 +6,7 @@
           <h2>Kelly Integrations</h2>
           <hr />
           <p>Merging today into the future.</p>
-          <a href="# " class="btn btn-primary">Learn More</a>
+          <a href="#about-section" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     </div>
