--- a/_includes/modules/service-module-about.html
+++ b/_includes/modules/service-module-about.html
@@ -1,7 +1,7 @@
 <div id="about-section" class="container service-module">
   <div class="row">
     {% for section in site.categories.about %}
-    <div class="col-xs-12 col-md-8 col-md-offset-2 service-container">
+    <div class="col-xs-12 service-container">
       <div class="col-xs-12 col-md-6 service-content">
           <p class="section-subheader">{{ section.sub-header }}</p>
           <h2 class="section-header">{{ section.header }}</h2>
