--- a/_includes/modules/contact-module.html
+++ b/_includes/modules/contact-module.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-md-8 col-md-offset-2 service-container contact-container">
         <div class="col-xs-12 col-md-6 service-content contact-module-content">
             <p class="section-subheader">Contact</p>
-            <h2 class="section-header">Let's get in touch!</h2>
+            <h2 class="section-header">How can I help you?</h2>
             <p><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span>9717 Sienna Valley Ave.</span></p>
             <p><span class="glyphicon glyphicon-phone" aria-hidden="true"></span><span>702-203-3319</span></p>
             <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><span>patkelly@kellyintegrations.com</span></p>
