Remove images from small screens.

--- a/_includes/modules/service-module-about.html
+++ b/_includes/modules/service-module-about.html
@@ -8,7 +8,7 @@
           {{ section.content }}
       </div>
       <div class="col-xs-12 col-md-6">
-        <img class="float-right shadow" src="{{ "assets/images/hero-image.jpg" | prepend: site.baseurl }}" alt="">
+        <img class="float-right shadow hidden-xs" src="{{ "assets/images/hero-image.jpg" | prepend: site.baseurl }}" alt="">
       </div>
     </div>
     {% endfor %}
