--- a/_includes/modules/service-module.html
+++ b/_includes/modules/service-module.html
@@ -5,7 +5,7 @@
       <div class="col-xs-12 service-container">
         {% if service.float == 'left' %}
         <div class="col-xs-12 col-md-6">
-          <img id="{{ service.sub-title | downcase }}" class="float-left shadow" src="{{ "assets/images/" | append: service.image | prepend: site.baseurl }}" alt="">
+          <img id="{{ service.sub-title | downcase }}" class="float-left shadow hidden-xs" src="{{ "assets/images/" | append: service.image | prepend: site.baseurl }}" alt="">
         </div>
         <div class="col-xs-12 col-md-6 service-content">
             <p class="section-subheader">{{ service.sub-title }}</p>
@@ -19,7 +19,7 @@
             {{ service.content }}
         </div>
         <div class="col-xs-12 col-md-6">
-          <img id="{{ service.sub-title | downcase }}" class="float-right shadow" src="{{ "assets/images/" | append: service.image | prepend: site.baseurl }}" alt="">
+          <img id="{{ service.sub-title | downcase }}" class="float-right shadow hidden-xs" src="{{ "assets/images/" | append: service.image | prepend: site.baseurl }}" alt="">
         </div>
         {% endif %}
       </div>
