--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
   <div class="row">
-    <p class="text-center">Kelly Integrations, 2016</p>
+    <p class="text-center"><small>&copy; Copyright 2017, Kelly Integrations</small></p>
   </div>
 </footer>
